# EpiGimp

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md
src/: main.cpp
src/core/: Application.cpp  Application.hpp  Canvas.cpp  Canvas.hpp  ColorManager.cpp  ColorManager.hpp  Command.cpp  Command.hpp  Grid.cpp  Grid.hpp  HistoryManager.cpp  HistoryManager.hpp  Image.cpp  Image.hpp  ImageManager.cpp  ImageManager.hpp  Layer.cpp  Layer.hpp  LayerManager.cpp  LayerManager.hpp  Rulers.cpp  Rulers.hpp  Selection.cpp  Selection.hpp
src/tools/: AirbrushTool.cpp  AirbrushTool.hpp  BucketFillTool.cpp  BucketFillTool.hpp  EraserTool.cpp  EraserTool.hpp  EyedropperTool.cpp  EyedropperTool.hpp  GradientTool.cpp  GradientTool.hpp  PanTool.cpp  PanTool.hpp  PencilTool.cpp  PencilTool.hpp  SelectTool.cpp  SelectTool.hpp  Tool.hpp  ToolFactory.hpp
src/ui/: Button.cpp  Button.hpp  ColorPanel.cpp  ColorPanel.hpp  ColorPickerDialog.cpp  ColorPickerDialog.hpp  ImageTab.cpp  ImageTab.hpp  LayerPanel.cpp  LayerPanel.hpp  Menu.cpp  Menu.hpp  MenuBar.cpp  MenuBar.hpp  NewImageDialog.cpp  NewImageDialog.hpp  SaveConfirmDialog.cpp  SaveConfirmDialog.hpp  StatusBar.cpp  StatusBar.hpp  TabManager.cpp  TabManager.hpp  ToolOptionsPanel.cpp  ToolOptionsPanel.hpp  ToolPanel.cpp  ToolPanel.hpp  Toolbar.cpp  Toolbar.hpp
